--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -304,6 +304,7 @@
         "controlFCPUIElementRelativeNote": "Hover mouse over a UI Element, hold CONTROL, then adjust MIDI Knob/Fader to register.",
         "controlsTimelineZoomViaTheAppearancePopup": "Controls Timeline Zoom via the Appearance Popup",
         "controlSurfaces": "Control Surfaces",
+        "convertFCPXMLToCSV": "Convert FCPXML to CSV",
         "copy": "Copy",
         "copyActiveApplicationTo": "Copy Active Application To",
         "copyActiveBankTo": "Copy Active Bank To",
@@ -392,6 +393,7 @@
         "core_tangent_os_sound_label": "Tangent: macOS Sound Controls",
         "core_tangent_os_window_label": "Tangent: Windows Management",
         "core_tangent_prefs_label": "Tangent: Preferences",
+        "core_toolbox_intro_label": "Toolbox: Intro",
         "core_toolbox_manager_label": "Toolbox: Manager",
         "core_tools_caffeinate_label": "Prevent Mac from Sleeping",
         "core_touchbar_banks_label": "Touchbar: Banks",
@@ -758,6 +760,7 @@
         "failedToAddCustomApplication": "Failed to add Custom Application.",
         "failedToAddCustomApplicationDescription": "CommandPost was unable to determine the bundle identifier or display name for the custom application.\n\nPlease provide feedback to the CommandPost team so that they can come up with a fix.",
         "failedToChangeLanguage": "Unable to change Final Cut Pro's language.",
+        "failedToProcessFCPXML": "Failed to process FCPXML",
         "failedToProcessTheCSVFile": "Failed to process the CSV file.",
         "failedToSwitchBackToFinalCutPro": "Failed to switch back to Final Cut Pro.",
         "family": "Family",
@@ -809,6 +812,7 @@
         "fcpxmlTitles": "FCPXML Titles",
         "fcpxmlTitlesProcessor": "FCPXML Titles Processor",
         "fcpxmlTitlesProcessorDescriptionLineOne": "This utility allows you update the titles within a FCPXML, based on new data from a CSV file.",
+        "fcpxmlTitlesProcessorDescriptionLineThree": "This utility was commissioned by Connor Eberhart.",
         "fcpxmlTitlesProcessorDescriptionLineTwo": "You can also Batch Process an entire folder. To do this, the FCPXML and CSV filenames need to be identical.",
         "featureRequest": "Feature Request",
         "feedback": "Feedback",
@@ -923,9 +927,11 @@
         "finalcutpro_tangent_browser_label": "Tangent: Browser Controls",
         "finalcutpro_tangent_clip_label": "Tangent: Final Cut Pro Clip Controls",
         "finalcutpro_tangent_color_label": "Tangent: Final Cut Pro Color Inspector Controls",
+        "finalcutpro_tangent_commandpost_functions_label": "Tangent: CommandPost Functions",
         "finalcutpro_tangent_commandpost_label": "Tangent: CommandPost",
         "finalcutpro_tangent_common_label": "Tangent: Common Utilities",
         "finalcutpro_tangent_edit_label": "Tangent: Final Cut Pro Edit Controls",
+        "finalcutpro_tangent_features_label": "Tangent: CommandPost Actions",
         "finalcutpro_tangent_generator_label": "Tangent: Generator Inspector",
         "finalcutpro_tangent_group_label": "Tangent: Final Cut Pro Support",
         "finalcutpro_tangent_info_label": "Tangent: Info Inspector",
@@ -933,6 +939,10 @@
         "finalcutpro_tangent_modes_label": "Tangent: Modes",
         "finalcutpro_tangent_new_label": "Tangent: Final Cut Pro New Controls",
         "finalcutpro_tangent_open_label": "Tangent: Open Final Cut Pro",
+        "finalcutpro_tangent_os_display_label": "Tangent: Display Actions",
+        "finalcutpro_tangent_os_label": "Tangent: macOS Actions",
+        "finalcutpro_tangent_os_pasteboard_label": "Tangent: Pasteboard Actions",
+        "finalcutpro_tangent_os_sound_label": "Tangent: Window Actions",
         "finalcutpro_tangent_overlay_label": "Tangent: Viewer Overlay",
         "finalcutpro_tangent_pasteboard_label": "Tangent: Final Cut Pro Pasteboard Buffer",
         "finalcutpro_tangent_playback_label": "Tangent: Playback",
@@ -977,6 +987,7 @@
         "finalcutpro_timeline_zoom_label": "Timeline: Zoom",
         "finalcutpro_timeline_zoomtoselection_label": "Timeline: Zoom to Selection",
         "finalcutpro_toolbox_fcpxmltitles_label": "Toolbox: FCPXML Titles",
+        "finalcutpro_toolbox_shotdata_label": "Toolbox: Shot Data",
         "finalcutpro_touchbar_manager_label": "Manager: Touch Bar",
         "finalcutpro_touchbar_virtual_label": "Virtual Touch Bar",
         "finalcutpro_touchbar_widgets_colorboard_label": "Widget: Color Board",
@@ -1159,7 +1170,9 @@
         "insideCorners": "Inside Corners",
         "inspector": "Inspector",
         "install": "Install",
+        "installMotionTemplate": "Install Motion Template",
         "intensity": "Intensity",
+        "intro": "Intro",
         "introTagLine": "Workflow Toolkit for Professional Editors",
         "introText": "Thank you for installing CommandPost. This guide will help you set things up.",
         "invalidAPIKeysSupplied": "Invalid API Keys Supplied",
@@ -1210,6 +1223,7 @@
         "layout": "Layout",
         "layoutEditor": "Layout Editor",
         "learn": "Learn",
+        "learnMore": "Learn More",
         "leaveFilesInPlaceOnImport": "Leave Files In Place On Import",
         "ledColor": "LED Color",
         "left": "Left",
@@ -1479,6 +1493,7 @@
         "pleaseLoadAValidFCPXMLTemplateAndTryAgain": "Please load a valid FCPXML Template and try again.",
         "pleasePickAFolderToUseAsAFavourite": "Please pick a folder to use as a favourite",
         "pleaseSelectACSVFile": "Please select a CSV file",
+        "pleaseSelectAFCPXMLFileToConvert": "Please select a FCPXML file to convert",
         "pleaseSelectAFCPXMLTemplate": "Please select a FCPXML Template",
         "pleaseSelectAFileToImport": "Please select a file to import",
         "pleaseSelectAFolderToBatchProcess": "Please select a folder to Batch Process",
@@ -1829,6 +1844,18 @@
         "shortcutsResetConfirmation": "This will reset all modified shortcuts to the default values.",
         "shortcutsSetNoneConfirmation": "This will reset all of the shortcuts to None.",
         "shotData": "Shot Data",
+        "shotDataDescriptionFour": "This utility was commissioned by Vigneswaran Rajkumar for a feature film project.",
+        "shotDataDescriptionOne": "This utility allows you to import a FCPXML which contains one or more Shot Data Titles in a timeline, and converts",
+        "shotDataDescriptionThree": "The Motion Template is currently optimised to work with timelines with a 4096 x 1716 resolution.",
+        "shotDataDescriptionTwo": "the data from these Motion Templates into a single CSV file for use in other applications.",
+        "shotDataDropZone": "You can also drag and drop projects from the Final Cut Pro Browser to here for processing...",
+        "shotDataFailedToInstallTemplate": "Failed to install Shot Data Template.",
+        "shotDataFailedToInstallTemplateDescription": "CommandPost was unable to install the Shot Data Motion Template. This is most likely a permissions issue.",
+        "shotDataFCPXMLFailedDescription": "CommandPost was unable to process the FCPXML. Please make sure the FCPXML contains a single timeline, which contains the Shot Data titles.",
+        "shotDataInstalledSuccessfully": "Shot Data Template installed successfully.",
+        "shotDataInstalledSuccessfullyDescription": "The Shot Data Title has been added to the CommandPost folder within Final Cut Pro.",
+        "shotDataInstallMotionTemplate": "Are you sure you want to install the latest Shot Data Motion Template?",
+        "shotDataInstallMotionTemplateDescription": "Clicking OK will install the latest Shot Data Motion Template into Final Cut Pro, replacing any previous versions. You can find it in the CommandPost section of Final Cut Pro's Titles browser.",
         "show": "Show",
         "showActionGroups": "Show Action Groups",
         "showAll": "Show All",
@@ -1978,6 +2005,8 @@
         "toggleVideoScopesInEventViewer": "Toggle Video Scopes in Event Viewer",
         "toggleVideoScopesInViewer": "Toggle Video Scopes in Viewer",
         "toolbox": "Toolbox",
+        "toolboxDescriptionOne": "The toolbox is an evolving collection of handy utilities commissioned by members of the CommandPost community to do very specific tasks, generally related to XML processing.",
+        "toolboxDescriptionTwo": "If there's something you or your company would like to automate, then you can contact the CommandPost team for advice and a quote.",
         "tools": "Tools",
         "top": "Top",
         "topCentreOfTimeline": "Top Centre of Timeline",
@@ -2113,6 +2142,7 @@
         "watchFolders": "Watch Folders",
         "watchFolderXMLHelp": "This feature allows you to recieve macOS notfications whenever a FCPXML file is added into any of the below watch folders.<br />From the notification you can then <b>Import</b> these files directly to your current Final Cut Pro timeline.<br />If you hold down <b>SHIFT</b> when pressing <b>Import</b>, it will import all the outstanding files.",
         "weight": "Weight",
+        "welcomeToTheToolbox": "Welcome to the Toolbox",
         "whatDidYouExpectToHappen": "What did you expect to happen?",
         "whatFeatures": "What feature would you like to see implemented or improved?",
         "whatStepsToRecreate": "What are the steps to recreate the problem?",
