Added new actions for controlling the Color Board
- Closes #2560

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -259,7 +259,8 @@
         "colorAndEffects": "Color & Effects",
         "colorBoard": "Color Board",
         "colorBoard2": "CB",
-        "colorboard_group": "Colour Board",
+        "colorboard_group": "Color Board",
+        "colorBoardActionSubTitle": "Controls the Final Cut Pro Color Board",
         "colorBoardCouldNotBeActivated": "The Color Board could not be activated. Please make sure a single clip in the timeline is selected and try again.",
         "colorBoardNextPane": "Color Board: Next Pane",
         "colorBoardPreviousPane": "Color Board: Previous Pane",
@@ -796,6 +797,7 @@
         "fcpx_action_action": "Actions",
         "fcpx_audioEffect_action": "Audio Effects",
         "fcpx_cmds_action": "Commands",
+        "fcpx_colorboard_action": "Color Board",
         "fcpx_colorInspector_action": "Color Inspector",
         "fcpx_command_group": "Final Cut Pro",
         "fcpx_fonts_action": "Fonts",
@@ -961,6 +963,7 @@
         "finalcutpro_timeline_captions_label": "Timeline: Captions",
         "finalcutpro_timeline_clipnavigation_label": "Timeline: Clip Navigation",
         "finalcutpro_timeline_colorboard_label": "Timeline: Color Board",
+        "finalcutpro_timeline_colorboardv2_label": "Timeline: Color Board v2",
         "finalcutpro_timeline_colorwheels_label": "Timeline: Color Wheel Actions",
         "finalcutpro_timeline_commandsetactions_label": "Command Set Actions",
         "finalcutpro_timeline_csv_label": "Timeline: Save to CSV",
